--- a/index.css
+++ b/index.css
@@ -56,6 +56,14 @@ h1 {
     background-color: gold;
   }
 
+  .gold-cell {
+    background-color: gold;
+  }
+
+  .user-cell {
+    border: 1px solid gold;
+    /* background-color: gold; */
+  }
   /* .cell {
     border: 1px solid gray;
   } */
