--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 body{
     background-color: green;
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
 
 }
 h1 {
-  font-size: 100px
+  font-size: 2em;
 }
 .popup {
   display: none; /* Hide the pop-up by default */
@@ -28,22 +28,23 @@ h1 {
 }
 
 .popup-content img {
-  width: 1800px;
-  height: 1600px;
+  width: 18em;
+}
+.historicalMoment {
+  position: absolute;
+  margin-left: 40%;
+  margin-top: 0%;
+ 
 }
 
+
 #closeButton {
-  height: 100px;
-  width: 200px;
-  font-size: 50px;
+  width: 5em;
+  font-size: 8px;
 }
 .filters {
-  font-size: 70px;
-  height: 200px;
-  width: 500px;
-}
-.delay {
-  margin-left: 700px;
+  font-size: 1em;
+  width: 6em;
 }
 #field {
     /* margin-left: 14%; */
@@ -53,15 +54,17 @@ h1 {
     padding: 10px;
     gap: 0px;
     padding: 0px;
+    table-layout: fixed;
   }
   
   .field td {
-    width: 31px;
-    height: 31px;
+    width: 0.2em;
+    height: 0.2em;
     /* border: 1px solid gray; */
     text-align: center;
     vertical-align: middle;
     font-size: 8px;
+    white-space: nowrap;
   }
 
   
