--- a/index.css
+++ b/index.css
@@ -55,6 +55,7 @@ h1 {
     gap: 0px;
     padding: 0px;
     table-layout: fixed;
+    position: relative;
   }
   
   .field td {
@@ -88,8 +89,18 @@ h1 {
   
   .black-cell {
     background: url("./soccer-ball-png-19.png");
+    background-repeat: no-repeat;
     /* color: white; */
-    background-size: cover;
+    background-position: center;
+    background-size: contain;
+    width: 100%;
+    height: 100%;
+    /* position: relative; */
+    overflow: visible;
+    z-index: 2;
+  
+    
+    /* z-index: 5; */
   }
 
   .cell.user-block {
