--- a/index.css
+++ b/index.css
@@ -7,45 +7,11 @@ body{
 h1 {
   font-size: 2em;
 }
-.popup {
-  display: none; /* Hide the pop-up by default */
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-  z-index: 9999; /* Ensure it's on top of other elements */
-}
 
-.popup-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  /* background-color: #fff; */
-  padding: 20px;
-}
-
-.popup-content img {
-  width: 18em;
-}
-.historicalMoment {
-  position: absolute;
-  margin-left: 40%;
-  margin-top: 0%;
- 
-}
-
-
-#closeButton {
-  width: 5em;
-  font-size: 8px;
-}
-.filters {
+/* .filters {
   font-size: 1em;
   width: 6em;
-}
+} */
 #field {
     /* margin-left: 14%; */
     /* margin-top: 2%; */
@@ -57,15 +23,23 @@ h1 {
     table-layout: fixed;
     position: relative;
   }
+
+  table {
+    table-layout: fixed;
+  }
   
   .field td {
-    width: 0.2em;
-    height: 0.2em;
+    font-size: 10px;
+    width: 0.5em;
+    height: 0.5em;
     /* border: 1px solid gray; */
     text-align: center;
     vertical-align: middle;
     font-size: 8px;
     white-space: nowrap;
+    vertical-align: middle; /* Center the content vertically */
+    box-sizing: border-box;
+    overflow: hidden;
   }
 
   
@@ -88,7 +62,8 @@ h1 {
   }
   
   .black-cell {
-    background: url("./soccer-ball-png-19.png");
+    /* background: url("./soccer-ball-png-19.png"); */
+    background-color: red;
     background-repeat: no-repeat;
     /* color: white; */
     background-position: center;
